...
    <string name="lookup_hint_number">Number</string>
    <string name="lookup_hint_year">Year</string>
    <string name="lookup_hint_date">Date</string>
    <string name="lookup_helper_number">Any whole number from 0 to 9999</string>
    <string name="lookup_helper_year">A year from 1 to 9999</string>
    <string name="lookup_helper_date">Tap to pick a month and day</string>
    <string name="error_enter_number">Please enter a number from 0 to 9999</string>
    <string name="error_enter_year">Please enter a year from 1 to 9999</string>
    <string name="error_pick_date">Please pick a date first</string>
    <string name="date_picker_title">Pick a date</string>

    <string name="copied_to_clipboard">Fact copied</string>
    <string name="share_chooser_title">Share this fact</string>
...
